# pygame-typing

./: .gitignore  README.md  demo_click.py  drag_test.py  game.py  hhutil.py  label.py  main.py  main2.py  main3.py  math_func.py  pygame_label_demo.py  pyproject.toml  scene.py  scrolling_word.py  settings.py  text_test.py  timer.py  util.py  word.py  word_history.txt
goodies/: math.py  mathy.py  progress_bar.py  scene.py  text.py  timer.py
