[tool.poetry]
name = "pygame-typing-game"
version = "0.1.0"
description = "A typing game for learning pygame"
authors = ["sugarvoid"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame-ce = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
